include/csp/csp.h

/**
 * Initialize CSP.
 * This will configure basic structures.
 */
void csp_init(void);
/**
 * Wait/accept a new connection.
 *
 * @param[in] socket socket to accept connections on, created by calling csp_socket().
 * @param[in] timeout  timeout in mS to wait for a connection, use CSP_MAX_TIMEOUT for infinite timeout.
 * @return New connection on success, NULL on failure or timeout.
 */
csp_conn_t *csp_accept(csp_socket_t *socket, uint32_t timeout);
/**
 * Read packet from a connection.
 * This function will wait on the connection's RX queue for the specified timeout.
 *
 * @param[in] conn  connection
 * @param[in] timeout timeout in mS to wait for a packet, use CSP_MAX_TIMEOUT for infinite timeout.
 * @return Packet or NULL in case of failure or timeout.
 */
csp_packet_t *csp_read(csp_conn_t *conn, uint32_t timeout);
/**
 * Send packet on a connection.
 * The packet buffer is automatically freed, and cannot be used after the call to csp_send()
 *
 * @param[in] conn connection
 * @param[in] packet packet to send
*/
void csp_send(csp_conn_t *conn, csp_packet_t *packet);
/**
 * Perform an entire request & reply transaction.
 * Creates a connection, send \a outbuf, wait for reply, copy reply to \a inbuf and close the connection.
 *
 * @param[in] prio priority, see #csp_prio_t
 * @param[in] dest destination address
 * @param[in] port destination port
 * @param[in] timeout timeout in mS to wait for a reply
 * @param[in] outbuf outgoing data (request)
 * @param[in] outlen length of data in \a outbuf (request)
 * @param[out] inbuf user provided buffer for receiving data (reply)
 * @param[in] inlen length of expected reply, -1 for unknown size (inbuf MUST be large enough), 0 for no reply.
 * @return 1 or reply size on success, 0 on failure (error, incoming length does not match, timeout)
 */
static inline int csp_transaction(uint8_t prio, uint16_t dest, uint8_t port, uint32_t timeout, const void * outbuf, int outlen, void * inbuf, int inlen) {
   return csp_transaction_w_opts(prio, dest, port, timeout, outbuf, outlen, inbuf, inlen, 0);
}
/**
 * Perform an entire request & reply transaction on an existing connection.
 * Send \a outbuf, wait for reply and copy reply to \a inbuf.
 *
 * @param[in] conn connection
 * @param[in] timeout timeout in mS to wait for a reply
 * @param[in] outbuf outgoing data (request)
 * @param[in] outlen length of data in \a outbuf (request)
 * @param[out] inbuf user provided buffer for receiving data (reply)
 * @param[in] inlen length of expected reply, -1 for unknown size (inbuf MUST be large enough), 0 for no reply.
 * @return 1 or reply size on success, 0 on failure (error, incoming length does not match, timeout)
 */
int csp_transaction_persistent(csp_conn_t *conn, uint32_t timeout, const void *outbuf, int outlen, void *inbuf, int inlen);
/**
 * Establish outgoing connection.
 * The call will return immediately, unless it is a RDP connection (#CSP_O_RDP) in which case it will wait until the other
 * end acknowledges the connection (timeout is determined by the current connection timeout set by csp_rdp_set_opt()).
 *
 * @param[in] prio priority, see #csp_prio_t
 * @param[in] dst Destination address
 * @param[in] dst_port Destination port
 * @param[in] timeout unused.
 * @param[in] opts connection options, see @ref CSP_CONNECTION_OPTIONS.
 * @return Established connection or NULL on failure (no free connections, timeout).
*/
csp_conn_t *csp_connect(uint8_t prio, uint16_t dst, uint8_t dst_port, uint32_t timeout, uint32_t opts);
/**
 * Close an open connection.
 * Any packets in the RX queue will be freed.
 *
 * @param[in] conn connection. Closing a NULL connection is acceptable.
 * @return #CSP_ERR_NONE on success, otherwise an error code.
 */
int csp_close(csp_conn_t *conn);
/**
 * Return destination port of connection.
 *
 * @param[in] conn connection
 * @return destination port of an incoming connection
 */
int csp_conn_dport(const csp_conn_t *conn);
/**
 * Return source port of connection.
 *
 * @param[in] conn connection
 * @return source port of an incoming connection
 */
int csp_conn_sport(const csp_conn_t *conn);
/**
 * Return destination address of connection.
 *
 * @param[in] conn connection
 * @return destination address of an incoming connection
 */
int csp_conn_dst(const csp_conn_t *conn);
/**
 * Return source address of connection.
 *
 * @param[in] conn connection
 * @return source address of an incoming connection
 */
int csp_conn_src(const csp_conn_t *conn);
/**
 * Set socket to listen for incoming connections.
 *
 * A connection-oriented socket starts receiving here: the router
 * drops packets addressed to a bound socket until it listens.
 *
 * @param[in] socket socket
 * @param[in] backlog max length of backlog queue. The backlog queue holds incoming connections, waiting to be returned by call to csp_accept().
 * @return #CSP_ERR_NONE on success, otherwise an error code.
*/
int csp_listen(csp_socket_t *socket, size_t backlog);
/**
 * Bind port to socket.
 *
 * A connection-less socket (#CSP_SO_CONN_LESS) starts receiving
 * here; a connection-oriented socket starts receiving in
 * csp_listen().
 *
 * @param[in] socket socket to bind port to
 * @param[in] port port number to bind, use #CSP_ANY for all ports. Binding to a specific will take precedence over #CSP_ANY.
 * @return #CSP_ERR_NONE on success, otherwise an error code.
 */
int csp_bind(csp_socket_t *socket, uint8_t port);
/**
 * Handle CSP service request.
 * If the given packet is a service-request (the destination port matches one of CSP service ports #csp_service_port_t),
 * the packet will be processed by the specific CSP service handler.
 * The packet will either process it or free it, so this function is typically called in the last "default" clause of
 * a switch/case statement in a CSP listener task.
 * In order to listen to csp service ports, bind your listener to the specific services ports #csp_service_port_t or
 * use #CSP_ANY to all ports.
 *
 * @param[in] packet first packet, obtained by using csp_read()
 */
void csp_service_handler(csp_packet_t *packet);
/**
 * Send a single ping/echo packet.
 *
 * @param[in] node address of subsystem.
 * @param[in] timeout timeout in ms to wait for reply.
 * @param[in] size payload size in bytes.
 * @param[in] opts connection options, see @ref CSP_CONNECTION_OPTIONS.
 * @return >=0 echo time in mS on success, otherwise -1 for error.
 */
int csp_ping(uint16_t node, uint32_t timeout, unsigned int size, uint8_t opts);
/**
 * Send a single ping/echo packet without waiting for reply.
 * Payload is 1 byte.
 *
 * @param[in] node address of subsystem.
 */
void csp_ping_noreply(uint16_t node);
/**
 * Request process list.
 *
 * .. note:: This is currently only supported on FreeRTOS systems.
 *
 * @param[in] node address of subsystem.
 * @param[in] timeout timeout in mS to wait for replies. The function will not return until the timeout occurs.
 */
void csp_ps(uint16_t node, uint32_t timeout);
/**
 * Request free memory and print to stdout.
 *
 * @param[in] node address of subsystem.
 * @param[in] timeout timeout in mS to wait for reply.
 */
void csp_memfree(uint16_t node, uint32_t timeout);
/**
 * Request free buffers and print to stdout.
 *
 * @param[in] node address of subsystem.
 * @param[in] timeout timeout in mS to wait for reply.
 */
void csp_buf_free(uint16_t node, uint32_t timeout);
/**
 * Reboot subsystem.
 * If handled by the standard CSP service handler, the reboot handler set by csp_sys_set_reboot() on the subsystem, will be invoked.
 *
 * @param[in] node address of subsystem.
 *
 */
void csp_reboot(uint16_t node);
/**
 * Print connection table to stdout.
 */
void csp_conn_print_table(void);
inline void csp_conn_print_table(void) {}