include/csp/csp_buffer.h

/**
 * Get free buffer from task context.
 *
 * @param[in] unused OBSOLETE ignored field, csp packets have a fixed size now
 * @return Buffer pointer to #csp_packet_t or NULL if no buffers available
 */
csp_packet_t * csp_buffer_get(size_t unused);
/**
 * Get free buffer (from ISR context).
 *
 * @param[in] unused OBSOLETE ignored field, csp packets have a fixed size now
 * @return Buffer pointer to #csp_packet_t or NULL if no buffers available
 */
csp_packet_t * csp_buffer_get_isr(size_t unused);
/**
 * Free buffer (from task context).
 *
 * @param[in] buffer buffer to free. NULL is handled gracefully.
 */
void csp_buffer_free(void * buffer);
/**
 * Return number of remaining/free buffers.
 * The number of buffers is set by csp_init().
 *
 * @return number of remaining/free buffers
 */
int csp_buffer_remaining(void);
void csp_buffer_init(void);